Closed Bug 45731 Opened 24 years ago Closed 23 years ago

scrollbars show up where they shouldn't be (select, listbox)

Categories

(Core :: Layout: Form Controls, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
Future

People

(Reporter: ajp+mozilla, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

Go to http://bugzilla.mozilla.org/query.cgi. The leftmost box on the top should
not have a scrollbar, but it does. 'Nuff said.
Using build # 2000071714
It appears the Linux doesn't size the scrollbar's thumb correctly when there is 
nothing to scroll. On WinNT it shows the scrollbar without the thumb, on Linux 
it should show the thumb taking up the entire vertical space. 
Assignee: rods → waqar
Accepting!!
Status: NEW → ASSIGNED
Target Milestone: --- → Future
*** Bug 46604 has been marked as a duplicate of this bug. ***
Updating QA contact.
QA Contact: ckritzer → vladimire
Is this bug saying that there shouldn't be a scrollbar in this case, or that 
the scrollbar shouldn't have a thumb (or should have a thumb that covers the 
entire height of the scrollbar)?  See also bug 53803.
Summary: scrollbars show up where they shouldn't be → scrollbars show up where they shouldn't be (select, listbox)
To last commenter, this bug is that there shouldn't be a scrollbar at all when
there are no items that go past the length of the form element.
Surely this is a dup of 53803 and in the XPToolkit component? I can't see any
relation to Form Submission at all.
I have just witness the same bug in .9 - to clarify, I expect to NOT have a
scroll bar under select multiple/size when there are not enough elements in the
select list to warrant a scroll. 
Err...I mean .8 (DOH!)
*** Bug 73811 has been marked as a duplicate of this bug. ***
This can cause display corruption - is there a keyword for that? I'm not filing
a separate bug for the corruption because if this bug was fixed, the corruption
wouldn't occur:

1. Go to http://ega051000009.lancs.ac.uk:8081/scrollbug2.html
2. Move mouse pointer over scrollbar
3. Scroll down with mousewheel 
Listbox scrolls so that items are at the bottom. Some random images, or grey
space, appears above them. Images change whenever I alt+tab or minimise+restore
the window. It appears to be grabbing images, typically toolbar images, from out
of range memory locations.
bulk reassigning Waqar's bugs to Don.
Assignee: waqar → dcone
Status: ASSIGNED → NEW
*** Bug 105786 has been marked as a duplicate of this bug. ***
*** Bug 63803 has been marked as a duplicate of this bug. ***
*** Bug 53803 has been marked as a duplicate of this bug. ***
Bug 53803 has a screenshot.
Component: Form Submission → HTML Form Controls
I am not really sure that bug #53803 is really a dup of this one, as they are
about somewhat different things. Anyway, the problem with incorrectly sized
scrollbar thumbs is (at least partially) related to nsScrollbar::SetParameters()
where you have this line (in both qt and gtk implementations):

int maxRange = (((int) aMaxRange) > 0 ? aMaxRange : 10);

When 10 is changed to 1, scrollbars generated with static pages have proper,
full-size thumbs (e.g. in top line of Bugzilla query page), because for these
scrollbars nsScrollbar::SetParameters() is called with all zeros as parameters.

However, this is not the case for scrollbars related to dynamically generated
scrollboxes (e.g. Program/Version/Component/Target Milestone on query page).
There the problem is subtler, because nsScrollbar::SetParameters() appears to be
not called at all in some cases.
*** Bug 113542 has been marked as a duplicate of this bug. ***
Attached patch PatchSplinter Review
(My first patch, please be gentle....)
Patch fixes the problem on linux/gtk. The scrollbar is still visible when there
are not enough items on the list, but the thumb is full-size. Is that a
problem?
I was not able to test it on other platforms as linux/gtk.
ryner, would you work completely obsolete any work done on this bug?  If not,
jkeiser, could you review?
Keywords: patch, review
*** Bug 119577 has been marked as a duplicate of this bug. ***
Blocks: 123569
Comment on attachment 63479 [details] [diff] [review]
Patch

r=blizzard - looks fine to me
Attachment #63479 - Flags: review+
Over to bz for checkin.  Thanks, bliz.
Assignee: dcone → bzbarsky
Checked in. Michiel, thanks for the patch!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verifying 2002-02-13-08-trunk linux redhat
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: