Make scrollbar thumbs for selects size correctly in GTK builds. Bug 45731, patch by Michiel van Leeuwen <hmvleeuwen@altavista.com>, r=blizzard, sr=shaver